--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "preact-cli": "^2.0.0"
   },
   "dependencies": {
+    "cannon": "^0.6.2",
     "preact": "^8.2.1",
     "preact-compat": "^3.17.0",
-    "preact-router": "^2.5.5"
+    "preact-router": "^2.5.5",
+    "three": "^0.87.1"
   }
 }
